endpoint buat cari buku berdasarkan id kategori
